# chimerax-ome-zarr

./: README.md  bundle_info.xml  pyproject.toml
src/: __init__.py  cmd.py  info.py  open.py
src/docs/user/: ome_zarr_index.html
src/docs/user/commands/: open.html
src/map_data/: constants.py  zarr_grid.py
src/util/: env.py  settings.py
